--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.26.1",
+    "axios": "^1.3.4",
+    "daisyui": "^2.51.3",
+    "firebase": "^9.17.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-otp-input": "^2.4.0",
+    "react-router-dom": "^6.9.0",
+    "react-router-hash-link": "^2.4.3",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
